# coma

./: .clang-format  .gitignore  .gitmodules  AVM-Debug.NOTES  AVM-Service.NOTES  AVTUK-CONSET.pro  CMakeLists.txt  COMA.pro  COMA.pro.user.8998bf1  COMA.pro.user.c946343  COMA.pro.user.orig  Doxyfile  FindBoost.cmake  Findhidapi.cmake  INSTALL.md  README.md  abstractprotocomchannel.cpp  abstractprotocomchannel.h  avm-service.NOTES  avm.tsv.in  build.bat  canal.cpp  canal.h  cconfig.h.in  checkdialog.cpp  checkdialog.h  coma.cpp  coma.cpp.autosave  coma.h  coma.rc  commands.cpp  commands.h  common.h  conanfile.txt  confdialog.cpp  confdialog.h  config.cpp  config.h  conset.cpp  conset.cpp.autosave  (+30 more)
src/: AVM-Debug.pro  AVM-Service.pro  CMakeLists.txt  Coma.pro  cconfig.h.in  coma.rc  common.pri  conanfile.txt  config.h.in  deps.pri  lib.pri  versioninfo.rc.in
src/AVM-Debug/: AVM-Debug.pri  AVM-Debug.pro  CMakeLists.txt  coma.cpp  coma.h  config.h.in  dbgmodule.cpp  dbgmodule.h  debugcoma.cpp  debugcoma.h  main.cpp  tunemodule.cpp  tunemodule.cpp.orig  tunemodule.h
src/AVM-Service/: AVM-Service.pri  AVM-Service.pro  CMakeLists.txt  cconfig.h.in  coma.cpp  coma.h  config.h.in  main.cpp  servicecoma.cpp  servicecoma.h  servicemodule.cpp  servicemodule.cpp.orig  servicemodule.h  settings.cpp  settings.h  svcmodule.cpp  svcmodule.h
src/PKDN-S/: main.cpp  pkdn_s.cpp  pkdn_s.h  pkdns-L.pro  pkdns-M-qt5.9.6-x86.pro  pkdns-S.pro
src/alarms/: CMakeLists.txt
src/alise/: CMakeLists.txt  alise.path  alise.service.in  conanfile.txt  controller.cpp  controller.h  eth0  eth1  eth2  grpc_sync_server.cpp  grpc_sync_server.h  helper.h  interfaces.qrc  main.cpp  postinst.in  postrm.in  prerm.in  recovery.cpp  recovery.h  serverrunner.cpp  serverrunner.h  stmbroker.cpp  stmbroker.h  timesyncronizer.cpp  timesyncronizer.h  zeropublisher.cpp  zeropublisher.h  zerorunner.cpp  zerorunner.h  zerosubscriber.cpp  zerosubscriber.h
src/app/: app.pro  coma.cpp  main.cpp
src/appconfig/: CMakeLists.txt
src/autonomous/: CMakeLists.txt
src/avm-debug/: CMakeLists.txt  main.cpp
src/avm-service/: CMakeLists.txt  main.cpp
src/avtuk/: CMakeLists.txt  avtuk.pri  avtuk.pro  eoscillogram.cpp  eoscillogram.h  filemanager.cpp  filemanager.h  getoscpbdelegate.cpp  oscdialog.cpp  oscdialog.h  oscmanager.cpp  oscmanager.h  parseid10001.cpp  parseid10001.h  parseid10020.cpp  parseid10020.h  parseid10030.cpp  parseid10030.h  parseid10031.cpp  parseid10031.h  parseid9000.cpp  parseid9000.h  parseid9050.cpp  parseid9050.h  parsemodule.cpp  parsemodule.h  pushbuttondelegate.cpp  pushbuttondelegate.h  relaydialog.cpp  relaydialog.h  switchjournaldialog.cpp  switchjournaldialog.h  swjdialog.cpp  swjdialog.h  swjmanager.cpp  swjmanager.h  trendviewdialog.cpp  trendviewdialog.h  trendviewmodel.cpp  trendviewmodel.h
src/check/: CMakeLists.txt  abstractcheckdialog.cpp  abstractcheckdialog.h  check.cpp  check.h  check.pri  check.pro  check.pro.orig  check3133dialog.cpp  check3133dialog.h  check3533dialog.cpp  check3533dialog.h  check84.h  checka1.cpp  checka1.h  checkdialoga1.cpp  checkdialoga1.h  checkharmonickdv.h  checkharmonicktf.cpp  checkharmonicktf.h  checkkdvdialog.cpp  checkkdvdialog.h  checkkdvharmonicdialog.cpp  checkkdvharmonicdialog.h  checkkdvvibrdialog.cpp  checkkdvvibrdialog.h  checkkiv.cpp  checkkivdialog.cpp  checkkivdialog.h  checkktf.h  checkktfdialog.cpp  checkktfdialog.h  checkktfharmonicdialog.cpp  checkktfharmonicdialog.h  delegate_check.h  eabstractcheckdialog.cpp  eabstractcheckdialog.h  signaldialog.cpp  signaldialog.h  signaldialog84.cpp  (+1 more)
src/cmake/: ConanInstallDependencies.cmake  DeployWinProject.cmake  gen.cmake  limereport.cmake  qcustomplot.cmake  qxlsx.cmake
src/coma/: CMakeLists.txt  version.h.in
src/coma_core/: CMakeLists.txt
src/comaresources/: CMakeLists.txt
src/comaversion/: CMakeLists.txt  comaversion.cpp  comaversion.h  comaversion.pri  comaversion.pro  helper.qrc  version.txt
src/comawidgets/: CMakeLists.txt
src/config/: CMakeLists.txt  abstractconfdialog.cpp  abstractconfdialog.h  baseconfig.cpp  baseconfig.h  conf8084dialog.cpp  conf8084dialog.h  confdialog.cpp  confdialog.h  confdialog84.h  confdialoga1.cpp  config.cpp  config.h  config.pri  config.pro  config80.cpp  config85.h  configblock.cpp  configblock.h  configdialog.cpp  configdialog.h  configkdv.cpp  configkdv.h  configkiv.cpp  configkiv.h  configktf.cpp  configktf.h  configkxx.cpp  configkxx.h  confkdvdialog.cpp  confkdvdialog.h  confkivdialog.cpp  confkivdialog.h  confktfdialog.cpp  confktfdialog.h  delegate.h  widgetfactory.cpp  widgetfactory.cpp~RF102c6913.TMP  widgetfactory.h
src/ctti/: CMakeLists.txt  ctti.pro  name.hpp  nameof.hpp  symbol.hpp  type_tag.hpp
src/datablocks/: CMakeLists.txt  bd0.cpp  bd0.h  datablock.cpp  datablock.h  datablocks.pri  datablocks.pro
src/device/: CMakeLists.txt
src/dialogs/: CMakeLists.txt  a1dialog.cpp  a1dialog.h  aboutdialog.cpp  aboutdialog.h  abstractinterfacedialog.cpp  abstractinterfacedialog.h  checkdialog.cpp  checkdialog.h  configdialog.cpp  configdialog.h  connectdialog.cpp  connectdialog.h  createmoduledialogs.cpp  createmoduledialogs.h  dialogcreator.cpp  dialogcreator.h  dialogmanager.cpp  dialogmanager.h  dialogs.pri  dialogs.pro  errconfstate.cpp  errordialog.cpp  errordialog.h  fwupdialog.cpp  fwuploaddialog.cpp  fwuploaddialog.h  hiddendialog.cpp  hiddendialog.h  infodialog.cpp  infodialog.h  interfaceemudialog.cpp  interfaceemudialog.h  interfaceethernetdialog.cpp  interfaceethernetdialog.h  interfaceserialdialog.cpp  interfaceserialdialog.h  interfaceusbdialog.cpp  interfaceusbdialog.h  journalsdialog.cpp  (+23 more)
src/editor/: CMakeLists.txt  moduleseditor.cpp  moduleseditor.h
src/grpc_proto/: CMakeLists.txt
src/iec104/: ethernet.cpp  ethernet.h  iec104.cpp
src/interfaces/: CMakeLists.txt  baseinterface.cpp  baseinterface.h  baseinterfacethread.cpp  baseinterfacethread.h  baseport.cpp  baseport.h  connectionmanager.cpp  connectionmanager.h  emulator.cpp  emulator.h  ethernet.cpp  ethernet.h  iec104.cpp  iec104.h  iec104private.h  iec104thread.h  (+28 more)
(+2385 files in other folders)
