project(alise)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

find_package(Qt5Core)
find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Xml REQUIRED)

include(${CMAKE_CURRENT_SOURCE_DIR}/../../conanbuildinfo.cmake)
conan_basic_setup(TARGETS)
find_package(Protobuf REQUIRED)

add_executable(${PROJECT_NAME} main.cpp timesyncronizer.cpp timesyncronizer.h helper.h grpc_sync_server.h grpc_sync_server.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${grpc_proto_DIR})
message(STATUS ALISE ${grpc_proto_DIR})
target_link_libraries(${PROJECT_NAME} interfaces gen grpc_proto Qt5::Core Qt5::Xml)
